Refresh skeleton plugin to later Java version with rationalized dependencies