@@ -2,7 +2,6 @@ package cd.go.authorization.skeleton.annotation;
 
 import com.google.gson.annotations.Expose;
 import com.google.gson.annotations.SerializedName;
-import org.apache.commons.lang3.StringUtils;
 
 import java.util.HashMap;
 import java.util.Map;
@@ -25,7 +24,7 @@ public class ProfileMetadata<T extends Metadata> {
     public Map<String, String> validate(String input) {
         HashMap<String, String> result = new HashMap<>();
         String validationError = doValidate(input);
-        if (StringUtils.isNotBlank(validationError)) {
+        if (validationError != null && !validationError.isBlank()) {
             result.put("key", key);
             result.put("message", validationError);
         }
@@ -34,7 +33,7 @@ public class ProfileMetadata<T extends Metadata> {
 
     protected String doValidate(String input) {
         if (isRequired()) {
-            if (StringUtils.isBlank(input)) {
+            if (input == null || input.isBlank()) {
                 return this.key + " must not be blank.";
             }
         }
